在今日数据前加了今日：

--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -9,7 +9,7 @@
                         <h5>营收概况</h5>
                     </div>
                     <div class="ibox-content">
-                        <h1 class="no-margins">{{ data.finance.today }}</h1>
+                        <h1 class="no-margins">今日：{{ data.finance.today }}</h1>
                         <small>近30日：{{ data.finance.month }}</small>
                     </div>
                 </div>
@@ -21,7 +21,7 @@
                         <h5>订单</h5>
                     </div>
                     <div class="ibox-content">
-                        <h1 class="no-margins">{{ data.order.today }}</h1>
+                        <h1 class="no-margins">今日：{{ data.order.today }}</h1>
                         <small>近30日：{{ data.order.today }}</small>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                         <h5>分享</h5>
                     </div>
                     <div class="ibox-content">
-                        <h1 class="no-margins">{{ data.shared.today }}</h1>
+                        <h1 class="no-margins">今日：{{ data.shared.today }}</h1>
                         <small>近30日：{{ data.shared.month }}</small>
                     </div>
                 </div>
