修改部分bug，支付与订阅未完成

--- a/web/templates/common/layout_main.html
+++ b/web/templates/common/layout_main.html
@@ -23,7 +23,7 @@
                         <img alt="image" class="img-circle" src="{{ buildStaticUrl('/images/common/logo.png') }}"/>
                     </div>
                 </li>
-                <li class="default">
+                <li class="default" style="left: -5px">
                     <a href="{{ buildUrl('/') }}"><i class="fa fa-dashboard fa-lg"></i>
                         <span class="nav-label">仪表盘</span></a>
                 </li>
