--- a/mina/pages/my/order_list.wxml
+++ b/mina/pages/my/order_list.wxml
@@ -1,6 +1,7 @@
 <view class="container">
+<view style="z-index:999;"><image style="height:80px !important;" src="/images/EQCode.jpg" bindtap='previewImage' wx:if="{{showCode}}"/></view>
     <view class="status-box">
-        <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}" wx:for-items="{{statusType}}" wx:key="{{index}}" data-index="{{index}}">
+        <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}" wx:for-items="{{statusType}}" wx:key="index" data-index="{{index}}">
             {{item}}
             <view class="{{tabClass[index]}}"></view>
         </view>
@@ -10,7 +11,7 @@
         <view class="text">暂无订单</view>
     </view>
     <view class="order-list" hidden="{{order_list ? false : true}}">
-        <view class="a-order" wx:for="{{order_list}}" wx:key="{{index}}" wx:for-item="item" >
+        <view class="a-order" wx:for="{{order_list}}" wx:key="index" wx:for-item="item" >
             <view class="order-date" data-id="{{item.order_sn}}" bindtap="orderDetail">
                 <view class="date-box">下单时间：{{item.date}}</view>
                 <view class="status {{(item.status==-1 || item.status==4) ? '':'red'}}">{{item.status_desc}}</view>
@@ -23,11 +24,12 @@
             </view>
             <view >
                 <scroll-view class="goods-img-container" scroll-x="true">
-                    <view class="img-box" wx:for="{{item.goods_list}}" wx:for-item="itemGood">
+                    <view class="img-box" wx:for="{{item.goods_list}}" wx:for-item="itemGood" wx:key="index">
                         <image src="{{itemGood.pic_url}}" class="goods-img"></image>
                     </view>
                 </scroll-view>
             </view>
+            
             <view class="price-box">
                 <view class="total-price">合计：¥ {{item.total_price}}</view>
                 <view class="btn cancel-btn" bindtap="orderCancel" data-id="{{item.order_sn}}" wx:if="{{item.status==-8}}">取消订单</view>
