--- a/mina/pages/order/index.wxml
+++ b/mina/pages/order/index.wxml
@@ -10,7 +10,7 @@
      </view>
      <view class="goods-list">
         <view class="list-title">商品列表</view>
-        <view class="a-goods" wx:for-items="{{goods_list}}" wx:key="{{index}}">
+        <view class="a-goods" wx:for-items="{{goods_list}}" wx:key="index">
             <view class="img-box">
                 <image src="{{item.pic_url}}" class="img" />
             </view>
