--- a/mina/pages/index/index.wxml
+++ b/mina/pages/index/index.wxml
@@ -15,7 +15,7 @@
          <image class="smalltitle" src="/images/more/confirm-word1.png"></image>
 
         <view class="confirm-btn" bindtap='goToIndex' wx:if="{{regFlag==true}}">
-          <text >走吧，下饭去</text>
+          <text >我餓了╮(╯-╰)╭</text>
         </view>
 
         <button class="confirm-btn" open-type="getUserInfo" bindgetuserinfo="login" wx:if="{{regFlag==false}}">授权登陆</button>
