修复bug 完善分享功能

--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -54,10 +54,10 @@
         </div>
         <div class="row">
             <div class="col-lg-12" id="member_order" style="height: 400px;border: 1px solid #e6e6e6;padding-top: 20px;">
-                使用highchart画图
+                暂无数据
             </div>
             <div class="col-lg-12" id="finance" style="height: 400px;border: 1px solid #e6e6e6;padding-top: 20px;">
-                使用highchart画图
+                暂无数据
             </div>
         </div>
     </div>
